fix name alignment

--- a/style.css
+++ b/style.css
@@ -9,9 +9,10 @@
     display: flex;
     justify-content: space-between;
     width: 500px;
-    align-items: center;
+    //align-items: center;
     padding: 5px;
     margin-bottom: 20px;
     border-radius: 6px;
 }
+
 
